# break_reminder_app

./: .gitignore  CMakeLists.txt  README.md
compile_resources/: main.rc
generate/: version.h.in
include/: BreakTimer.h  ConfigurationManager.h  Functions.h  Log.h  MainWindow.h  Platform.h  PlatformEvents.h  PopupWidget.h  version.h
src/: BreakTimer.cpp  ConfigurationManager.cpp  Functions.cpp  Log.cpp  MainWindow.cpp  Platform.cpp  PlatformEvents.cpp  PopupWidget.cpp  main.cpp
ui/: MainWindow.ui  PopupWidget.ui  default.css
